Fix mobile menu when wpadminbar is visible.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -131,6 +131,7 @@ html, body {
 #masthead {
 	background:#eee;
 	margin-bottom:20px;
+	position: relative;
 }
 #masthead .section {
 	padding:0 30px;
